--- a/aboutmun.html
+++ b/aboutmun.html
@@ -67,7 +67,7 @@
                         </div><!-- /.navbar-collapse -->  
                         
                         <div class="register-login">
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScad81MpbvE4iGFBpSP_tD_JxcGsQooLwN3Fm7MG05JKV9KBw/viewform" class="nir-btn white hover-color">Register Now <i class="fa fa-angle-right"></i></a>
+                            <a href="https://docs.google.com/forms/d/1C91naJzBI6XcewO0djrsnhsrDeb0TzalyMVWu12VOjY/viewform?pli=1&pli=1&edit_requested=true&fbzx=-5192943332496547837" class="nir-btn white hover-color">Register Now <i class="fa fa-angle-right"></i></a>
                         </div>
                           
 
@@ -283,7 +283,7 @@
                     </h2>
                 </div>
                 <p class="my-3">Join a global community, uniting over 3000 delegates till date, driven by a shared vision of progress and change. </p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLScad81MpbvE4iGFBpSP_tD_JxcGsQooLwN3Fm7MG05JKV9KBw/viewform" class="nir-btn">Register Now <i class="fa fa-angle-right "></i></a>
+                <a href="https://docs.google.com/forms/d/1C91naJzBI6XcewO0djrsnhsrDeb0TzalyMVWu12VOjY/viewform?pli=1&pli=1&edit_requested=true&fbzx=-5192943332496547837" class="nir-btn">Register Now <i class="fa fa-angle-right "></i></a>
             </div>
         </div>
     </section>
