--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                             </ul>
                         </div><!-- /.navbar-collapse -->   
                         <div class="register-login">
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScad81MpbvE4iGFBpSP_tD_JxcGsQooLwN3Fm7MG05JKV9KBw/viewform" class="nir-btn white hover-color">Register Now <i class="fa fa-angle-right"></i></a>
+                            <a href="https://docs.google.com/forms/d/1C91naJzBI6XcewO0djrsnhsrDeb0TzalyMVWu12VOjY/viewform?pli=1&pli=1&edit_requested=true&fbzx=-5192943332496547837" class="nir-btn white hover-color">Register Now <i class="fa fa-angle-right"></i></a>
                         </div>
 
                         <div id="slicknav-mobile"></div>
@@ -148,7 +148,7 @@
                                 </div>
                                 <div class="info-content ps-4">
                                     <h5>MUN Conference Schedule</h5>
-                                    <p class="m-0">11th - 12th May</p>
+                                    <p class="m-0">26th - 27th April</p>
                                     <p class="m-0">from 7:30 AM to 6 PM.</p>
                                 </div>
                             </div>
