--- a/team.html
+++ b/team.html
@@ -74,7 +74,7 @@
                         </div><!-- /.navbar-collapse -->  
                         
                         <div class="register-login">
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScad81MpbvE4iGFBpSP_tD_JxcGsQooLwN3Fm7MG05JKV9KBw/viewform" class="nir-btn white hover-color">Register Now <i class="fa fa-angle-right"></i></a>
+                            <a href="https://docs.google.com/forms/d/1C91naJzBI6XcewO0djrsnhsrDeb0TzalyMVWu12VOjY/viewform?pli=1&pli=1&edit_requested=true&fbzx=-5192943332496547837" class="nir-btn white hover-color">Register Now <i class="fa fa-angle-right"></i></a>
                         </div>
                           
 
